# EChat-Qt5

./: README.md  常见问题（必看）.txt
Client-EChat/: EChat.pro  global.cpp  global.h  main.cpp  res.qrc  thumbnail.h
Client-EChat/db/: database.cpp  database.h
Client-EChat/device/: config.cpp  config.h  desktop.cpp  desktop.h  file.cpp  file.h  screenshot.cpp  screenshot.h
Client-EChat/emo/: emoji.cpp  emoji.h  emoji.ui
Client-EChat/item/: headpicture.cpp  headpicture.h  headpicture.ui  itemchatobject.cpp  itemchatobject.h  itemchatobject.ui  itemcontact.cpp  itemcontact.h  itemcontact.ui  itemfriendapply.cpp  itemfriendapply.h  itemfriendapply.ui
Client-EChat/network/: client.cpp  client.h
Client-EChat/qss/: chat.qss  home.qss  login.qss
Client-EChat/ui/: uichat.cpp  uichat.h  uichat.ui  uihome.cpp  uihome.h  uihome.ui  uilogin.cpp  uilogin.h  uilogin.ui  uirely.cpp  uirely.h
DB/: 客户端SQLite(仅结构).sql
Server-EChat/: CMakeLists.txt  main.cpp  编译问题.txt
Server-EChat/include/: DataBase.h  Server.h
Server-EChat/mysql-sql/: readme.txt  structure.sql
Server-EChat/src/: CMakeLists.txt  DataBase.cpp  FdTool.cpp  Server.cpp
Server-EChat/test/: client  client.c  client2  client2.c  client3  client3.c  client4  client4.c  server  server.c
